--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <div class="row">
         <div class="col-md-6">
           <h2>East:</h2>
-          <ul class="unstyled">
+          <ul class="styled" id=catclass>
 
           </ul>
         </div>
 
         <div class="col-md-6">
           <h2>West:</h2>
-          <ul class="unstyled">
+          <ul class="unstyled" id="dogclass">
 
           </ul>
       </div>
